Fixed letter spacing

--- a/client/stylesheets/customers.scss
+++ b/client/stylesheets/customers.scss
@@ -3,6 +3,7 @@
 .customer-header {
   font-size: 1.414em;
   padding:15px;
+  letter-spacing: 2px;
 
   div {
     line-height: 1.33;
